# shot-power-scraper

./: .gitignore  API_README.md  CONFIG.md  Dockerfile  EXTENSIONS.md  MHTML.md  README.md  api_client_example.py  api_server.py  build_static_extensions.py  docker.md  main.py  pyproject.toml  pytest.ini  requirements-api.txt  run_api.sh  setup.py  shot-scraper-api.service
.github/workflows/: test.yml
docs/: abp-rules-support.md  accessibility.md  authentication.md  conf.py  contributing.md  github-actions.md  har.md  html.md  index.md  installation.md  javascript.md  multi.md  pdf.md  screenshots.md
extensions/blocker-shared/: README.md  ad-block-rules.json  build.sh  content.js  cosmetic-popup-block-rules.json  custom-ad-block-filters.txt  custom-popup-block-filters.txt  extract_cosmetic_rules.js  manifest.json  package-lock.json  package.json  popup.html
extensions/bypass-paywalls-chrome-clean-master/: README.html  README.md  background.js  changelog.txt  contentScript.js  contentScript_once.js  contentScript_once_var.js  manifest.json  sites.js  sites_updated.json  updates.xml
shot_power_scraper/: TODO.md  annoyance_manager.py  browser.py  cli.py  console_logger.py  har_capture.py  page_utils.py  pdf_utils.py  response_handler.py  screenshot.py  shot_config.py  utils.py
shot_scraper/: annoyance_manager.py  browser.py  cli.py  page_utils.py  screenshot.py  utils.py
tests/: README.md  run_examples.sh  run_examples_quick.sh  run_visual_regression.sh  run_visual_tests.sh  run_visual_tests_quick.sh  test_shot_config.py  test_shot_scraper.py  test_utils.py
(+70 files in other folders)
